# codeswitch

./: .bazelrc  .clang-format  .travis.yml  BUILD.bazel  README.md  WORKSPACE  codeswitch.h
.github/workflows/: main.yml
cmd/cswasm/: BUILD.bazel  cswasm.cpp
cmd/cswi/: BUILD.bazel  cswi.cpp
common/: BUILD.bazel  common.cpp  common.h  common_test.cpp  error.cpp  error.h  file.cpp  file.h  str.cpp  str.h
data/: BUILD.bazel  array.h  array_test.cpp  list.h  list_test.cpp  map.h  map_test.cpp  string.cpp  string.h  string_test.cpp
flag/: BUILD.bazel  flag.cpp  flag.h
interpreter/: BUILD.bazel  interpreter.cpp  interpreter.h  interpreter_test.cpp
interpreter/testdata/: factorial.csws
memory/: BUILD.bazel  bitmap.cpp  bitmap.h  bitmap_test.cpp  block.cpp  block.h  chunk.cpp  chunk.h  handle.cpp  handle.h  heap.cpp  heap.h  heap_test.cpp  ptr.h  roots.cpp  roots.h  stack.cpp  stack.h
package/: BUILD.bazel  asm.cpp  asm.h  asm_test.cpp  function.cpp  function.h  inst.cpp  inst.h  package.cpp  package.h  roots.cpp  roots.h  serial.cpp  serial.h  type.cpp  type.h
package/testdata/: trivial.csws
platform/: BUILD.bazel  platform.h  platform_posix.cpp
runner/: BUILD.bazel  runner.cpp  runner.h
test/: BUILD.bazel  test.cpp  test.h
vm/: BUILD.bazel  vm.cpp  vm.h
