load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "common",
    srcs = [
        "common.cpp",
        "error.cpp",
        "file.cpp",
        "str.cpp",
    ],
    hdrs = [
        "common.h",
        "error.h",
        "file.h",
        "str.h",
    ],
    visibility = ["//:__subpackages__"],
)

cc_test(
    name = "common_test",
    srcs = ["common_test.cpp"],
    deps = [
        ":common",
        "//test",
    ],
)
