cc_library(
    name = "memory",
    srcs = [
        "bitmap.cpp",
        "chunk.cpp",
        "heap.cpp",
        "roots.cpp",
    ],
    hdrs = [
        "bitmap.h",
        "block.h",
        "chunk.h",
        "heap.h",
        "roots.h",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//common",
        "//platform",
    ],
)

cc_test(
    name = "memory_test",
    srcs = [
        "bitmap_test.cpp",
        "heap_test.cpp",
    ],
    deps = [
        ":memory",
        "//common",
        "//test",
    ],
)
