cc_library(
    name = "memory",
    srcs = [
        "bitmap.cpp",
        "block.cpp",
        "chunk.cpp",
        "handle.cpp",
        "heap.cpp",
        "roots.cpp",
    ],
    hdrs = [
        "bitmap.h",
        "block.h",
        "chunk.h",
        "handle.h",
        "heap.h",
        "roots.h",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//common",
        "//platform",
        "//vm",
    ],
)

cc_test(
    name = "memory_test",
    srcs = [
        "bitmap_test.cpp",
        "heap_test.cpp",
    ],
    deps = [
        ":memory",
        "//common",
        "//test",
    ],
)
