load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "memory",
    srcs = [
        "bitmap.cpp",
        "chunk.cpp",
        "handle.cpp",
        "heap.cpp",
        "stack.cpp",
    ],
    hdrs = [
        "bitmap.h",
        "chunk.h",
        "handle.h",
        "heap.h",
        "ptr.h",
        "stack.h",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//common",
        "//platform",
    ],
)

cc_test(
    name = "memory_test",
    srcs = [
        "bitmap_test.cpp",
        "heap_test.cpp",
    ],
    deps = [
        ":memory",
        "//common",
        "//test",
    ],
)
