load("@rules_cc//cc:defs.bzl", "cc_library")

config_setting(
    name = "linux",
    constraint_values = ["@bazel_tools//platforms:linux"],
)

config_setting(
    name = "darwin",
    constraint_values = ["@bazel_tools//platforms:osx"],
)

cc_library(
    name = "platform",
    srcs = select({
        ":darwin": ["platform_posix.cpp"],
        ":linux": ["platform_posix.cpp"],
    }),
    hdrs = ["platform.h"],
    deps = ["//common"],
    visibility = ["//:__subpackages__"],
)
